<resources>
    <string name="app_name">Kundasale Auto Service</string>
    <string name="button_text">button_text</string>
    <string name="welcome">WELCOME</string>
    <string name="kundasale_auto_service_pvt_ltd">Kundasale Auto Service (Pvt) Ltd</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="passsword">Passsword</string>
    <string name="email_adress">Email Adress</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="signup">SIGNUP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="accident">Accident</string>
    <string name="about">About</string>
    <string name="process">Process</string>
    <string name="address">Address</string>
    <string name="vehicle_reg_number">Vehicle Reg. Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="make_and_model">Make and Model</string>
    <string name="colour">Colour</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="year_and_manufacture">Year and Manufacture</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="change_name">Change Name</string>
    <string name="change_contact_number">Change Contact Number</string>
    <string name="back">Back</string>
    <string name="about_our_managing_director">About Our Managing Director</string>
    <string name="the_managing_director_of_the_company_is_an_automobile_electronics_engineer_with_more_than_thirty_years_experience_working_in_many_areas_of_the_automobile_industry_in_the_united_kingdom_as_well_as_sri_lanka">The Managing Director of the Company is an Automobile Electronics Engineer with more than thirty years experience, working in many areas of the Automobile Industry in the United Kingdom as well as Sri Lanka.</string>
    <string name="about_our_company">About Our Company</string>
    <string name="kundasale_auto_service_pvt_ltd_is_the_largest_independent_network_of_garages_in_sri_lanka_consisting_of_three_large_state_of_the_art_vehicle_repair_workshops_situated_in_kundasale_pallekelle_boi_estate_and_mihintale_the_head_office_in_kundasale_was_opened_in_1994_today_kas_is_a_well_established_company_operating_as_an_authorised_dealer_for_toyota_nissan_suzuki_maruti_kia_micro_chery_mahindra_and_isuzu_mechanical_and_electrical_repairs_are_carried_out_using_the_latest_computerised_diagnostic_scanners_and_software">Kundasale Auto Service Pvt Ltd is the largest Independent Network of Garages in Sri Lanka, consisting of three large, State-of-the-Art Vehicle Repair Workshops situated in Kundasale, Pallekelle BOI Estate and Mihintale. The Head Office in Kundasale was opened in 1994. Today, KAS is a Well Established Company, operating as an Authorised Dealer for Toyota, Nissan, Suzuki, Maruti, Kia, Micro, Chery, Mahindra and Isuzu. Mechanical and Electrical Repairs are carried out using the Latest Computerised Diagnostic Scanners and Software.</string>
    <string name="services_provided_include_lubricant_service_mechanical_electrical_accident_repairs_chassis_body_aligning_using_body_jigs_with_computerised_systems_wheel_alignment_and_air_conditioning_repairs_we_carry_out_all_specialized_repairs_on_hybrid_vehicles_kas_specialises_in_booth_painting_using_sikkens_2k_paint_with_up_to_90_000_colours_which_can_be_mixed_for_perfect_colour_matching"><![CDATA[Services provided include: Lubricant Service, Mechanical/Electrical & Accident Repairs, Chassis & Body Aligning (using Body Jigs with Computerised Systems), Wheel Alignment and Air Conditioning Repairs. We carry out all Specialized Repairs on Hybrid Vehicles. KAS specialises in Booth Painting using Sikkens 2K Paint with up to 90,000 Colours which can be mixed for Perfect Colour Matching.]]></string>
    <string name="a_highly_efficient_twenty_four_hour_recovery_service_is_available_for_accidents_and_breakdowns_which_operates_island_wide_365_days_a_year_we_have_a_staff_strength_of_approximately_250_people_working_for_our_company_the_specialized_knowledge_and_practical_skills_of_our_staff_are_continuously_being_up_graded_to_enable_us_to_provide_the_highest_standard_of_service_to_our_much_valued_customers_training_programmes_are_also_provided_by_other_major_automobile_companies_keeping_our_staff_thoroughly_up_dated_in_the_field_of_advanced_automobile_technology_all_genuine_spare_parts_are_supplied_to_our_company_by_the_agents_and_we_sell_them_at_the_agents_controlled_prices">A Highly Efficient Twenty-Four Hour Recovery Service is available for Accidents and Breakdowns which operates Island Wide 365 days a year. We have a Staff Strength of approximately 250 people working for Our Company. The Specialized Knowledge and Practical Skills of our Staff are continuously being Up Graded to enable us to provide the Highest Standard of Service to our much Valued Customers. Training Programmes are also provided by other Major Automobile Companies keeping our Staff thoroughly up dated in the Field of Advanced Automobile Technology. All Genuine Spare Parts are supplied to Our Company by the Agents and we sell them at the Agents\' Controlled Prices</string>
    <string name="new_first_name">New First Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="fb_page">FB PAGE</string>
    <string name="call_us">CALL US</string>
    <string name="messenger">MESSENGER</string>
    <string name="submit">Submit</string>
    <string name="locate_us">Locate Us</string>
    <string name="our_postal_address">Our Postal Address :</string>
    <string name="_20_dharshanapura_rd_kundasale_20168">20 Dharshanapura Rd, Kundasale 20168.</string>
    <string name="email">Email</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="body_shop">Body Shop</string>
    <string name="paint_shop">Paint Shop</string>
    <string name="mechanic_shop">Mechanic Shop</string>


</resources>
