<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark"
    android:fitsSystemWindows="true">


    <Button
        android:id="@+id/accident"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:text="@string/accident"
        android:textSize="35sp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120" />

    <Button
        android:id="@+id/process"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:text="@string/process"
        android:textSize="35sp"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.280" />

    <Button
        android:id="@+id/about"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:text="@string/about"
        android:textSize="35sp"
        android:textColor="@android:color/holo_blue_bright"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.440" />


    <Button
        android:id="@+id/page"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/fb_page"
        android:textSize="20sp"
        android:drawableStart="@drawable/facebook"
        android:padding="9dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.600" />

    <Button
        android:id="@+id/chat"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/messenger"
        android:textSize="20sp"
        android:drawableStart="@drawable/messenger"
        android:padding="9dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700" />

    <Button
        android:id="@+id/call"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/call_us"
        android:textSize="20sp"
        android:drawableStart="@drawable/call"
        android:padding="9dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

    <Button
        android:id="@+id/mail"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/buttonwhite"
        android:text="@string/email"
        android:textSize="20sp"
        android:drawableStart="@drawable/mail"
        android:padding="9dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.900" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:text="@string/back"
        android:textSize="25sp"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />



</androidx.constraintlayout.widget.ConstraintLayout>